# Strassen

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: matinv.txt  matmat.txt
include/: IO.h  block_utilities.h  naive_lu.h  naive_matmat.h  strassen_inv.h  strassen_matmat.h  test.h
src/: .IO.c.swp  .main.c.swp  .naive_lu.c.swp  .strassen_inv.c.swp  .strassen_matmat.c.swp  .test.c.swp  IO.c  block_utilities.c  main.c  naive_lu.c  naive_matmat.c  strassen_inv.c  strassen_matmat.c  test.c
